# Proyectos

./: .gitignore  README.md
ENTREGABLES-PROYECTO/PARTE 1/: .env  README.md  docker-compose.yml  pyproject.toml
ENTREGABLES-PROYECTO/PARTE 2/: .env  README.md  Segundo_Entregable_Proyecto_ETL.md  docker-compose.yml  pyproject.toml
ENTREGABLES-PROYECTO/PARTE 2/data/raw/: dane_pobreza_monetaria.html  municipios_colombia.html  wikipedia_departamentos_idh.html
ENTREGABLES-PROYECTO/PARTE 2/notebooks/: 01_scraping.ipynb  02_cleaning_and_ge.ipynb  03_dw_load.ipynb  04_analytics.ipynb
ENTREGABLES-PROYECTO/PARTE 2/src/dw/: 03_dw_load.py
ENTREGABLES-PROYECTO/PARTE 2/src/scraping/: 01_scraping.py
ENTREGABLES-PROYECTO/PARTE 2/src/transform/: 02_cleaning_and_ge.py
ENTREGABLES-PROYECTO/PARTE 2/src/validation/gx/expectations/: .ge_store_backend_id
ENTREGABLES-PROYECTO/PARTE 3/: .gitignore  README.md  README_Proyecto_Final.md  docker-compose.yml
ENTREGABLES-PROYECTO/PARTE 3/etl/: load.py  (+2 more)
Proyecto Icfes/WORKSHOPS/WORKSHOP-2/: docker-compose.yml  pyproject.toml
Proyecto Icfes/WORKSHOPS/WORKSHOP-2/data/raw/: used_cars_base.csv
Proyecto Icfes/WORKSHOPS/WORKSHOP-2/data/staging/: used_cars_scrapping.csv
Proyecto Icfes/WORKSHOPS/WORKSHOP-2/dw/: schema.sql
Proyecto Icfes/WORKSHOPS/WORKSHOP-2/notebooks/: 03_great_expectations.ipynb
WORKSHOPS/WORKSHOP-1/: docker-compose.yml
WORKSHOPS/WORKSHOP-2/: README.md  Segundo_Workshop_ETL.md  docker-compose.yml
WORKSHOPS/WORKSHOP-3/: .env
WORKSHOPS/Workshop 3 Reproducible/: .env  README Reproducibilidad.md  docker-compose.yml
(+60 files in other folders)
