[project]
name = "etl-workshop2"
version = "0.1.0"
description = "Etl del workshop2"
requires-python = "==3.11.*"

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "pandas>=2.1",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "matplotlib>=3.8",
    "seaborn>=0.12.2",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "great-expectations==0.18.12",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-dotenv>=1.0"
]